--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -32,7 +32,7 @@
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form action="#" th:object="${user}">
+                                    <form th:action="@{/user/create}" method="post" th:object="${user}">
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
@@ -86,10 +86,10 @@
                                                 <div class="form-group">
                                                     <label>Gender</label><br>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" th:value="Male" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Male</span>
+                                                        <input type="radio" name="radio-inline" th:value="MALE" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Male</span>
                                                     </label>
                                                     <label class="custom-control custom-radio custom-control-inline">
-                                                        <input type="radio" name="radio-inline" th:value="Female" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Female</span>
+                                                        <input type="radio" name="radio-inline" th:value="FEMALE" th:field="*{gender}" class="custom-control-input"><span class="custom-control-label">Female</span>
                                                     </label>
 
                                                 </div>
@@ -154,10 +154,10 @@
 
                                             <tbody>
 
-                                            <tr th:each="theUser : ${userList}">
+                                            <tr th:each="theUser : ${users}">  <!-- userList -->
                                                 <td th:text="${theUser.firstName + ' ' + theUser.lastName}"></td>
                                                 <td th:text="${theUser.userName}"></td>
-                                                <td th:text="${theUser.gender}"></td>
+                                                <td th:text="${theUser.gender.value}"></td>
                                                 <td th:text="${theUser.phone}"></td>
                                                 <td th:text="${theUser.role.description}"></td>
                                                 <td class="actions">
