--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -101,6 +101,7 @@
                                                     <select th:field="*{role}" name="role" class="custom-select">
                                                         <option th:value="''" th:text="Select"></option> <!-- just show -->
                                                         <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
+                                                                                                  <!-- Html show it as a String "2" -->
                                                     </select>
                                                 </div>
                                             </div>
