--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -157,14 +157,15 @@
 
                                             <tbody>
 
-                                            <tr th:each="theUser : ${users}">  <!-- userList -->
-                                                <td th:text="${theUser.firstName + ' ' + theUser.lastName}"></td>
-                                                <td th:text="${theUser.userName}"></td>
-                                                <td th:text="${theUser.gender.value}"></td>
-                                                <td th:text="${theUser.phone}"></td>
-                                                <td th:text="${theUser.role.description}"></td>
+                                            <tr th:each="user: ${users}">
+                                                <td th:text="${user.firstName + ' ' + user.lastName}"></td>
+                                                <td th:text="${user.userName}"></td>
+                                                <td th:text="${user.gender.value}"></td>
+                                                <td th:text="${user.phone}"></td>
+                                                <td th:text="${user.role.description}"></td>
                                                 <td class="actions">
-                                                    <a href="#"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
+                                                                  <!-- endPoint for GetMapping       -->
+                                                    <a th:href="@{/user/update/{id}(id=${user.userName})}"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
                                                     <a href="#" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
                                                 </td>
                                             </tr>
