--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -33,7 +33,7 @@
 
                                     <!-- ------------------------FORM START----------------------------- -->
                                     <!-- end point for post-->
-                                    <form th:action="@{/user/create}" method="post" th:object="${user}">
+                                    <form th:action="@{/user/update}" method="post" th:object="${user}">
                                         <div class="row">
                                             <div class="col-sm-6 col-md-6">
                                                 <div class="form-group">
