--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -101,7 +101,7 @@
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
                                                     <select th:field="*{role}" name="role" class="custom-select">
-                                                       <!-- <option th:value="''" th:text="Select"></option>  -->  <!-- just show -->
+                                                       <!-- <option th:value="''" th:text="Select"></option>  -->  <!-- no needed bcs it has to show what is the selected from update button -->
                                                         <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.description}"></option>
                                                         <!-- Html show it as a String "2" -->
                                                     </select>
