ticketing project part3

--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -132,7 +132,7 @@
                                                 <td th:text="${project.projectName}"></td>
                                                 <td th:text="${project.startDate + ' ' + project.endDate}"></td>
                                                 <td th:text="${project.assignedManager.firstName + ' ' + project.assignedManager.lastName}"></td>
-                                                <td th:text="${project.projectStatus.value}"></td>
+                                                <td th:text="${project.projectStatus.value}"></td> <!-- it can return error -->
                                                 <td>
                                                     <a href="#"><button type="button" class="btn btn-warning rounded-0">Update</button></a>
                                                     <a th:href="@{/project/delete/{id}(id=${project.projectCode})}"><button type="button" class="btn btn-danger rounded-0">Delete</button></a>
