--- a/src/main/resources/templates/task/create.html
+++ b/src/main/resources/templates/task/create.html
@@ -32,14 +32,17 @@
                                 <div class="panel-body">
 
                                     <!-- ------------------------FORM START----------------------------- -->
-                                    <form th:action="@{/task/create}"  method="post" th:object="${task}">
+                                    <form th:action="@{/task/create}" method="post" th:object="${task}">
 
                                         <div class="row">
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label>Project</label>
-                                                    <select th:field="*{project}" name="project" class="custom-select">
-                                                        <option th:each="project : ${projects}" th:value="${project.projectCode}" th:text="${project.projectName}"></option>
+                                                    <select name="project" class="custom-select" th:field="*{project}">
+                                                        <option th:value="''" th:text="Select"></option>
+                                                        <option th:each="project : ${projects}"
+                                                                th:value="${project.projectCode}"
+                                                                th:text="${project.projectName}"></option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -49,8 +52,12 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label>Assigned Employee</label>
-                                                    <select th:field="*{assignedEmployee}" name="assignedemployee" class="custom-select">
-                                                        <option th:each="employee : ${employees}" th:value="${employee.userName}" th:text="${employee.firstName+ ' ' + employee.lastName}"></option>
+                                                    <select name="assignedemployee" class="custom-select"
+                                                            th:field="*{assignedEmployee}">
+                                                        <option th:value="''" th:text="Select"></option>
+                                                        <option th:each="employee : ${employees}"
+                                                                th:value="${employee.userName}"
+                                                                th:text="${employee.firstName + ' ' + employee.lastName}"></option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -60,8 +67,8 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label for="tasksubject" class="col-form-label">Task Subject</label>
-                                                    <input th:field="*{taskSubject}" id="tasksubject" type="text" class="form-control"
-                                                           placeholder="task subject">
+                                                    <input id="tasksubject" type="text" class="form-control"
+                                                           placeholder="task subject" th:field="*{taskSubject}">
                                                 </div>
                                             </div>
                                         </div>
@@ -70,8 +77,9 @@
                                             <div class="col">
                                                 <div class="form-group">
                                                     <label for="taskdetail">Task Detail</label>
-                                                    <textarea th:field="*{taskDetail}" id="taskdetail" class="form-control"
-                                                              placeholder="task detail"></textarea>
+                                                    <textarea id="taskdetail" class="form-control"
+                                                              placeholder="task detail"
+                                                              th:field="*{taskDetail}"></textarea>
                                                 </div>
                                             </div>
                                         </div>
@@ -84,7 +92,6 @@
                                                 </div>
                                             </div>
                                         </div>
-
 
                                     </form>
                                     <!-- ------------------------FORM END----------------------------- -->
@@ -123,18 +130,17 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr th:each="task : ${tasks} ">
-
-                                              <td th:text="${task.project.projectName}"></td>
-
+                                            <tr th:each="task : ${tasks}">
+                                                <td th:text="${task.project.projectCode + '-' + task.project.projectName}"></td>
                                                 <td th:text="${task.taskSubject}"></td>
-                                                <td th:text="${task.assignedEmployee.firstName + ' ' + task.assignedEmployee.lastName}"></td>
-                                                <td th:text="${task.assignedDate}"></td>
+                                                <td th:text="${task.assignedEmployee.firstName +' ' + task.assignedEmployee.lastName}"></td>
+                                                <td th:text="${#temporals.format(task.assignedDate,'MM/dd/yyyy')}"></td>
                                                 <td th:text="${task.taskStatus.value}"></td>
-
-                                                <td class="actions">
-                                                    <a href="#" class="btn btn-warning rounded-0">Update</a>
-                                                    <a href="#" class="btn btn-danger rounded-0">Delete</a>
+                                                <td>
+                                                    <a th:href="@{/task/update/{id}(id=${task.getId()})}"
+                                                       class="btn btn-warning rounded-0">Update</a>
+                                                    <a th:href="@{/task/delete/{id}(id=${task.getId()})}"
+                                                       class="btn btn-danger rounded-0">Delete</a>
                                                 </td>
                                             </tr>
                                             </tbody>
